# socket-development

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  package.json
fileForSketching/: sequence.drawio  sketch_map.drawio
inc/: Logging.h  Server.h  Socket.h
src/: IMU_json.cpp  IMU_json.h  Logging.cpp  Logging.h  Server.cpp  Server.h  Socket.cpp  Socket.h
